--- a/timepads/todo.html
+++ b/timepads/todo.html
@@ -1,16 +1,40 @@
 <html>
     <script>
+        let id=0;
+        function createChild(task,desc,id)
+        {
+            const child=document.createElement("div");
+            child.setAttribute("id",id);
+            const grandchild1=document.createElement("div");
+            grandchild1.innerHTML=task;
+            const grandchild2=document.createElement("div");
+            grandchild2.innerHTML=desc;
+            const grandchild3=document.createElement("button");
+            grandchild3.innerHTML="mark as done"
+            grandchild3.setAttribute("onclick",`markAsDone(${id})`);
+            child.appendChild(grandchild1);
+            child.appendChild(grandchild2);
+            child.appendChild(grandchild3);
+            return child;
+        }
+        function markAsDone(id)
+        {
+            const div=document.getElementById(id);
+            div.innerHTML="";
+        }
         function add()
         {
             const task=document.getElementById("task").value;
             const desc=document.getElementById("desc").value;
             const div=document.getElementById("list");
-            const original=div.innerHTML;
-            div.innerHTML=original+`
-                <div>${task}</div>
-                <div>${desc}</div>
-                <button onclick="">mark as done</button>
-            `
+            div.appendChild(createChild(task,desc,id));
+            id++;
+            // const original=div.innerHTML;
+            // div.innerHTML=original+`<div id="ct${id}">
+            //     <div>${task}</div>
+            //     <div>${desc}</div>
+            //     <button onclick="delete()">mark as done</button></div>
+            // `
         }
     </script>
     <body>
